edited miss html dat

--- a/1592054539.html
+++ b/1592054539.html
@@ -14,7 +14,7 @@ function be(i,r){var w=window.open('http://be.2ch.net/test/p.php?i='+i+'&u=d:'+'
 </head>
 <body bgcolor=#efefef text=black link=blue alink=red vlink=#660099 style="font-size:12pt; font-family:'ＭＳ Ｐゴシック','Mona';">
 <div style="margin-top:1em;"><span style='float:left;'>
-<a href="1592054539.html">全部</a> <a href="#R1">1-</a> <a href="#R101">101-</a> <a href="#R201">201-</a> <a href="#R301">301-</a> <a href="#R401">401-</a> <a href="#R501">501-</a> <a href="#R601">601-</a> <a href="#R701">701-</a> <a href="#R801">801-</a> <a href="#R901">901-</a> <a href="#R951">最新50</a>
+<a href="1592054539.html">全部</a> <a href="#R1">1-</a> <a href="#R101">101-</a> <a href="#R201">201-</a> <a href="#R301">301-</a> <a href="#R401">401-</a> <a href="#R501">501-</a> <a href="#R601">601-</a> <a href="#R701">701-</a> <a href="#R801">801-</a> <a href="#R901">901-</a> <a href="#R1001">1001-</a> <a href="#R953">最新50</a>
 </span>&nbsp;</div>
 <hr style="background-color:#888;color:#888;border-width:0;height:1px;position:relative;top:-.4em;">
 <h1 style="color:red;font-size:larger;font-weight:normal;margin:-.5em 0 0;">オケラ電凸YouTube配信 </h1>
@@ -1019,12 +1019,12 @@ function be(i,r){var w=window.open('http://be.2ch.net/test/p.php?i='+i+'&u=d:'+'
 <dt><a name="R998">998</a> 名前：<font color=green><b>オカラ </b>◆R6uwkq2Gqwse <b></b></font>投稿日：2020/06/13(土) 23:11:43.60 ID:83UNZJDZd<dd><a href="#R992">&gt;&gt;992</a><br>それワイの荒らしかた<br><br>
 <dt><a name="R999">999</a> 名前：<font color=green><b>オカラ </b>◆R6uwkq2Gqwse <b></b></font>投稿日：2020/06/13(土) 23:11:44.99 ID:buhf2+Ufd<dd><a href="#R992">&gt;&gt;992</a><br>それワイの荒らしかた<br><br>
 <dt><a name="R1000">1000</a> 名前：<font color=green><b>オカラ </b>◆R6uwkq2Gqwse <b></b></font>投稿日：2020/06/13(土) 23:11:45.23 ID:buhf2+Ufd<dd><a href="#R992">&gt;&gt;992</a><br>それワイの荒らしかた<br><br>
-<dt><a name="R1001">1001</a> 名前：<font color=green><b>[ここ壊れてます]</b></font>投稿日：[ここ壊れてます]<dd>[ここ壊れてます]<br><br>
-<dt><a name="R1002">1002</a> 名前：<font color=green><b>[ここ壊れてます]</b></font>投稿日：[ここ壊れてます]<dd>[ここ壊れてます]<br><br>
+<dt><a name="R1001">1001</a> 名前：<font color=green><b>1001</b></font>投稿日：Over 1000 Thread<dd>このスレッドは１０００を超えました。<br>新しいスレッドを立ててください。 <br>life time: 49分 26秒<br><br>
+<dt><a name="R1002">1002</a> 名前：<font color=green><b>1002</b></font>投稿日：Over 1000 Thread<dd>5ちゃんねるの運営はプレミアム会員の皆さまに支えられています。<br>運営にご協力お願いいたします。<br><br><br>───────────────────<br>《プレミアム会員の主な特典》<br>★ 5ちゃんねる専用ブラウザからの広告除去<br>★ 5ちゃんねるの過去ログを取得<br>★ 書き込み規制の緩和<br>───────────────────<br><br> 会員登録には個人情報は一切必要ありません。<br>月300円から匿名でご購入いただけます。<br><br> ▼ プレミアム会員登録はこちら ▼<br><a href="https://premium.5ch.net/" target="_blank">https://premium.5ch.net/</a><br><br> ▼ 浪人ログインはこちら ▼<br><a href="https://login.5ch.net/login.php" target="_blank">https://login.5ch.net/login.php</a><br><br>
 </dl>
 </font><hr>
 <a href="1592054539.html">全部</a>
- <a href="#R951">最新50</a>
+ <a href="#R953">最新50</a>
 <div style="text-align:right; font-size:7.5pt;"><a href="http://tatsu01.at.infoseek.co.jp/" rel="nofollow">
 DAT2HTML</a> 0.35f FIX Converted.</div>
 </body>
