edited html javascript link

--- a/1592054539.html
+++ b/1592054539.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="Content-Script-Type" content="text/javascript">
 <meta name="Author" content="1592054539">
-<script type="text/javascript" charset="Shift_JIS" src="dat2html_popup.js"></script>
+<script type="text/javascript" charset="Shift_JIS" src="./dat2html_popup.js"></script>
 <title>オケラ電凸YouTube配信 </title>
 <script type="text/javascript" defer>
 <!--
