--- a/1592054539.html
+++ b/1592054539.html
@@ -4,12 +4,10 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="Content-Script-Type" content="text/javascript">
 <meta name="Author" content="1592054539">
-<script type="text/javascript" charset="Shift_JIS" src="./dat2html_popup.js"></script>
+<script type="text/javascript" src="./popup.js"></script>
 <title>オケラ電凸YouTube配信 </title>
 <script type="text/javascript" defer>
-<!--
 function be(i,r){var w=window.open('http://be.2ch.net/test/p.php?i='+i+'&u=d:'+''+r);if(w)w.focus();}
-//-->
 </script>
 </head>
 <body bgcolor=#efefef text=black link=blue alink=red vlink=#660099 style="font-size:12pt; font-family:'ＭＳ Ｐゴシック','Mona';">
